Got some fun videoing going on

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -2,9 +2,12 @@
 <html>
   <head>
     <title>{{title}}</title>
+    <meta name="viewport" content="width=device-width; initial-scale=1.0">
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
     {{{body}}}
+    <script src="/bower_components/color-thief/dist/color-thief.min.js"></script>
+    <script src="/javascripts/app.js"></script>
   </body>
 </html>
