--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -1,8 +1,7 @@
-body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+#video, #canvas {
+  width: 100%;
 }
 
-a {
-  color: #00B7FF;
+#canvas {
+  display: none;
 }
